# neko.chat

./: .gitignore  README.md  run.sh
backend/: .env  .env.example  Cargo.toml
backend/src/: auth.rs  config.rs  database.rs  error.rs  main.rs  routes.rs
backend/src/handlers/: auth_handler.rs  chat_handler.rs  key_handler.rs  llm_handler.rs  mod.rs  settings_handler.rs  ws_handler.rs
backend/src/llm/: mod.rs
backend/src/routes/: auth.rs  chat.rs  key.rs  mod.rs  settings.rs  websocket.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: app.css
frontend/src/lib/: keybindings.js  theme.js
frontend/src/lib/api/: auth.js  chats.js  client.js  index.js  keys.js  llm.js  models.js  settings.js  websocket.js
frontend/src/lib/components/: ASCIIArt.svelte  AppLayout.svelte  AuthForm.svelte  ChatGraph.svelte  ChatInterface.svelte  ChatSearchModal.svelte  KeybindingProvider.svelte  MarkdownRenderer.svelte  ReasoningRenderer.svelte  ReasoningSelector.svelte  RightSidebar.svelte  SettingsSidebar.svelte  Sidebar.svelte  ThemeToggle.svelte  WelcomeMessage.svelte
frontend/src/lib/components/settings/: ApiKeys.svelte  Appearance.svelte  General.svelte  Models.svelte  Shortcuts.svelte  SystemPrompts.svelte
frontend/src/lib/stores/: app.js  auth.js  chats.js  index.js  models.js  settings.js  ui.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/auth/callback/: +page.svelte
frontend/src/routes/settings/: +page.svelte
