[package]
name = "backend"
version = "0.1.0"
edition = "2021" # Changed from 2024 to the latest stable edition

[dependencies]
axum = { version = "0.7.5", features = ["ws"] } # Reverted to a known stable version to match the code
# Add the "typed-header" feature
axum-extra = { version = "0.9.3", features = ["query", "typed-header"] }
bcrypt = "0.15.1" # Using a compatible version
dotenvy = "0.15.7"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0" # Using a compatible version
oauth2 = "4.4.2" # Using a compatible version
reqwest = { version = "0.12.5", features = ["json", "stream"] } # Using a compatible version
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
# Add the "env-filter" feature
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Add "v4" and "serde" features
uuid = { version = "1.8.0", features = ["v4", "serde"] }
# Add chrono with the "serde" feature
chrono = { version = "0.4.38", features = ["serde"] }

# This was missing and is required for #[async_trait]
async-trait = "0.1.80"

# This was missing and is required for CORS
tower-http = { version = "0.5.2", features = ["cors"] }
magic-crypt = "4.0.1"
async-stream = "0.3.6"
urlencoding = "2.1.3"
